--- a/app/views/pages/how_we_work.html.erb
+++ b/app/views/pages/how_we_work.html.erb
@@ -6,10 +6,10 @@
       <div class="row">
         <div class="intro-content right large-6 columns">
           <h2 class="intro-title">
-            How We Work.
+            About Us
           </h2>
           <h4 class="sub-title">
-            Ut sit amet enim eu tellus convallis semper ac sed dolor. Donec sodales in risus vel gravida. Sed blandit elit in lobortis fringilla. Proin.
+A great software experience requires elegant, flexible code and a delightful, intuitive interface. The result is a digital application that looks beautiful, functions perfectly and delights users. Our team works together to craft an integrated experience so your application exceeds expectations.
           </h4>
         </div>
       </div>
@@ -19,10 +19,13 @@
 
 <div class="our-values">
   <div class="row">
+    <div class="how-we-work-intro">
+      <h1> HOW WE WORK</h1>
+      <h4>The way we approach projects at Bendyworks can be summed up in a single word: flexibility. From the contact we have with you down to the methods we use to code, our entire process revolves around staying nimble and adaptable to your needs. So how exactly do we go about doing that? Well…</h4>
+    </div>
     <div class="individual-values large-10 large-centered columns">
       <ul class="how-values">
         <li class="value-item">
-
           <h2 class="value-title">
             We talk with you. A lot.
           </h2>
@@ -31,17 +34,14 @@
           </p>
         </li>
         <li class="value-item">
-
           <h2 class="value-title">
             We don't do fixed bids.
           </h2>
           <p class="value-description">
            Software projects rarely end up exactly where you planned at the beginning. Because we charge by time and materials, you can change the scope of your project in a natural way as it evolves. Need new features? Need to stop a project and start it up again later? Bendyworks is flexible enough to adjust to your needs on the fly, without having to rework a contract.
-         </p>
+          </p>
        </li>
-
        <li class="value-item">
-
         <h2 class="value-title">
           We work in pairs.
         </h2>
@@ -50,7 +50,6 @@
         </p>
       </li>
       <li class="value-item">
-
         <h2 class="value-title">
           We use BDD and TDD.
         </h2>
@@ -61,7 +60,6 @@
        </p>
      </li>
      <li class="value-item">
-
       <h2 class="value-title">
         We use the right tools.
       </h2>
@@ -76,62 +74,6 @@
 </div>
 </div>
 
-<div class="services">
-  <div class="row">
-    <div class="services-tools large-10 large-centered columns">
+<%= render 'partials/people' %>
 
-      <ul class="services-list large-5 columns">
-         <h2 class="services-title">
-        Services
-      </h2>
-        <li class="service-list-item">
-          <h3>Wep App Development</h3>
-        </li>
-         <li class="service-list-item">
-          <h3>Mentoring</h3>
-        </li>
-         <li class="service-list-item">
-          <h3>Consulting</h3>
-        </li>
-         <li class="service-list-item">
-          <h3>Front End Development</h3>
-        </li>
-         <li class="service-list-item">
-          <h3>Branding</h3>
-        </li>
-         <li class="service-list-item">
-          <h3>Design</h3>
-        </li>
-         <li class="service-list-item">
-          <h3>Mobile Development</h3>
-        </li>
-      </ul>
-
-
-      <ul class="tools-list large-5 columns">
-         <h2 class="tools-title">
-        Tools
-      </h2>
-        <li class="tools-list-item">
-          <h3>Ruby on Rails</h3>
-        </li>
-         <li class="tools-list-item">
-          <h3>Clojure</h3>
-        </li>
-         <li class="tools-list-item">
-          <h3>HTML5 & CSS3</h3>
-        </li>
-         <li class="tools-list-item">
-          <h3>Javascript</h3>
-        </li>
-         <li class="tools-list-item">
-          <h3>Cat Herding</h3>
-        </li>
-         <li class="tools-list-item">
-          <h3>Cat Herding</h3>
-        </li>
-      </ul>
-    </div>
-  </div>
-</div>
 <%= render 'partials/footer' %>
