--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -78,16 +78,30 @@
 	<div class="box-4">
 		<div class="row">
 			<div class="large-12 columns">
-				<div class="home-box-content large-6 columns">
-					<h2 class="intro-title-2">
-						Ut nunc mi, auctor sit amet tempor in
+				<div class="home-box-content large-12 columns">
+					<h2 class="intro-title">
+						From Our Blog
 					</h2>
-					<p class"sub-title-2">
-						Phasellus mi ipsum, sagittis sit amet lectus sit amet, laoreet porttitor sapien. Mauris et odio molestie, vulputate orci ut, pharetra tellus. Donec vel porta ipsum. Nulla id sagittis risus. Donec interdum nisl at est mattis, ac venenatis quam luctus. Vivamus pharetra tortor ac blandit eleifend. Ut sed est quis ligula gravida fringilla.
-					</p>
-				</div>
-				<div class="large-6 columns">
-					<img src="http://placehold.it/400x500">
+					<ul class="large-block-grid-3 small-block-grid-1 align-center">
+						<li>
+							<img class="fifty-radius" src="http://placehold.it/200x200">
+								<h3>Bwoken 2 Beta Released</h3>
+								<p>Invoke with "bwoken" instead of "rake"</p>
+								<a href="http://localhost:3000/our_blog_deep" class="tiny button radius">Read More</a>
+						</li>
+						<li>
+							<img class="fifty-radius"  src="http://placehold.it/200x200">
+								<h3>ConcertCam</h3>
+								<p>Smile for the camera at Live on King Street</p>
+								<a href="http://localhost:3000/our_blog_deep" class="tiny button radius">Read More</a>
+						</li>
+						<li>
+							<img class="fifty-radius"  src="http://placehold.it/200x200">
+								<h3>It's Growth Day at Bendyworks</h3>
+								<p>Watch our video about Growth Days</p>
+								<a href="http://localhost:3000/our_blog_deep" class="tiny button radius">Read More</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
