--- a/app/views/pages/our_blog.html.erb
+++ b/app/views/pages/our_blog.html.erb
@@ -1,145 +1,147 @@
 <%= render 'partials/header' %>
 
+ <div class="blog_wrapper">
   <div class="blog-intro row">
-    <div class="blog-entry large-4 columns">
-      <img src="http://placehold.it/100x100">
-      <div class="blog-title">
-        <h2>
-          Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
-        </h2>
-        <div class="sub-headline">
-           <h4>
-          acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
-          </h4>
-        </div>
-        <a href="#" class="button">Read More</a>
-      </div>
-    </div>
-    <div class="blog-entry large-4 columns">
-      <img src="http://placehold.it/100x100">
-      <div class="blog-title">
-        <h2>
-          Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
-        </h2>
-        <div class="sub-headline">
-           <h4>
-          acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
-          </h4>
-        </div>
-        <a href="#" class="button">Read More</a>
-      </div>
-    </div>
-    <div class="blog-entry large-4 columns">
-      <img src="http://placehold.it/100x100">
-      <div class="blog-title">
-        <h2>
-          Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
-        </h2>
-        <div class="sub-headline">
-           <h4>
-          acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
-          </h4>
-        </div>
-        <a href="#" class="button">Read More</a>
-      </div>
-    </div>
-  </div>
+     <div class="blog-entry large-4 columns">
+       <img src="http://placehold.it/100x100">
+       <div class="blog-title">
+         <h2>
+           Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
+         </h2>
+         <div class="sub-headline">
+            <h4>
+           acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
+           </h4>
+         </div>
+         <a href="/our_blog_deep" class="button">Read More</a>
+       </div>
+     </div>
+     <div class="blog-entry large-4 columns">
+       <img src="http://placehold.it/100x100">
+       <div class="blog-title">
+         <h2>
+           Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
+         </h2>
+         <div class="sub-headline">
+            <h4>
+           acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
+           </h4>
+         </div>
+         <a href="/our_blog_deep" class="button">Read More</a>
+       </div>
+     </div>
+     <div class="blog-entry large-4 columns">
+       <img src="http://placehold.it/100x100">
+       <div class="blog-title">
+         <h2>
+           Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
+         </h2>
+         <div class="sub-headline">
+            <h4>
+           acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
+           </h4>
+         </div>
+         <a href="/our_blog_deep" class="button">Read More</a>
+       </div>
+     </div>
+   </div>
 
 
-    <div class="blog-intro row">
-    <div class="blog-entry large-4 columns">
-      <img src="http://placehold.it/100x100">
-      <div class="blog-title">
-        <h2>
-          Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
-        </h2>
-        <div class="sub-headline">
-           <h4>
-          acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
-          </h4>
-        </div>
-        <a href="#" class="button">Read More</a>
-      </div>
-    </div>
-    <div class="blog-entry large-4 columns">
-      <img src="http://placehold.it/100x100">
-      <div class="blog-title">
-        <h2>
-          Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
-        </h2>
-        <div class="sub-headline">
-           <h4>
-          acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
-          </h4>
-        </div>
-        <a href="#" class="button">Read More</a>
-      </div>
-    </div>
-    <div class="blog-entry large-4 columns">
-      <img src="http://placehold.it/100x100">
-      <div class="blog-title">
-        <h2>
-          Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
-        </h2>
-        <div class="sub-headline">
-           <h4>
-          acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
-          </h4>
-        </div>
-        <a href="#" class="button">Read More</a>
-      </div>
-    </div>
-  </div>
+     <div class="blog-intro row">
+     <div class="blog-entry large-4 columns">
+       <img src="http://placehold.it/100x100">
+       <div class="blog-title">
+         <h2>
+           Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
+         </h2>
+         <div class="sub-headline">
+            <h4>
+           acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
+           </h4>
+         </div>
+         <a href="/our_blog_deep" class="button">Read More</a>
+       </div>
+     </div>
+     <div class="blog-entry large-4 columns">
+       <img src="http://placehold.it/100x100">
+       <div class="blog-title">
+         <h2>
+           Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
+         </h2>
+         <div class="sub-headline">
+            <h4>
+           acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
+           </h4>
+         </div>
+         <a href="/our_blog_deep" class="button">Read More</a>
+       </div>
+     </div>
+     <div class="blog-entry large-4 columns">
+       <img src="http://placehold.it/100x100">
+       <div class="blog-title">
+         <h2>
+           Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
+         </h2>
+         <div class="sub-headline">
+            <h4>
+           acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
+           </h4>
+         </div>
+         <a href="/our_blog_deep" class="button">Read More</a>
+       </div>
+     </div>
+   </div>
 
 
-    <div class="blog-intro row">
-    <div class="blog-entry large-4 columns">
-      <img src="http://placehold.it/100x100">
-      <div class="blog-title">
-        <h2>
-          Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
-        </h2>
-        <div class="sub-headline">
-           <h4>
-          acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
-          </h4>
-        </div>
-        <a href="#" class="button">Read More</a>
-      </div>
-    </div>
-    <div class="blog-entry large-4 columns">
-      <img src="http://placehold.it/100x100">
-      <div class="blog-title">
-        <h2>
-          Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
-        </h2>
-        <div class="sub-headline">
-           <h4>
-          acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
-          </h4>
-        </div>
-        <a href="#" class="button">Read More</a>
-      </div>
-    </div>
-    <div class="blog-entry large-4 columns">
-      <img src="http://placehold.it/100x100">
-      <div class="blog-title">
-        <h2>
-          Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
-        </h2>
-        <div class="sub-headline">
-           <h4>
-          acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
-          </h4>
-        </div>
-        <a href="#" class="button">Read More</a>
-      </div>
-    </div>
-  </div>
+     <div class="blog-intro row">
+     <div class="blog-entry large-4 columns">
+       <img src="http://placehold.it/100x100">
+       <div class="blog-title">
+         <h2>
+           Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
+         </h2>
+         <div class="sub-headline">
+            <h4>
+           acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
+           </h4>
+         </div>
+         <a href="/our_blog_deep" class="button">Read More</a>
+       </div>
+     </div>
+     <div class="blog-entry large-4 columns">
+       <img src="http://placehold.it/100x100">
+       <div class="blog-title">
+         <h2>
+           Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
+         </h2>
+         <div class="sub-headline">
+            <h4>
+           acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
+           </h4>
+         </div>
+         <a href="/our_blog_deep" class="button">Read More</a>
+       </div>
+     </div>
+     <div class="blog-entry large-4 columns">
+       <img src="http://placehold.it/100x100">
+       <div class="blog-title">
+         <h2>
+           Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
+         </h2>
+         <div class="sub-headline">
+            <h4>
+           acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
+           </h4>
+         </div>
+         <a href="/our_blog_deep" class="button">Read More</a>
+       </div>
+     </div>
+   </div>
 
-  <div class="row">
-    <a href="#" class="previous large-2 columns">Previous</a>
-    <a href="#" class="next large-2 columns">Next</a>
-  </div>
+   <div class="row">
+     <a href="#" class="previous large-2 columns">Previous</a>
+     <a href="#" class="next large-2 columns">Next</a>
+   </div>
+ </div>
 
 <%= render 'partials/footer' %>
