--- a/app/views/pages/our_blog_deep.html.erb
+++ b/app/views/pages/our_blog_deep.html.erb
@@ -1,28 +1,59 @@
 <%= render 'partials/header' %>
 
 <div class="blog-deep-body">
-<div class="row">
-<h2 class="blog-title">Entry title</h2>
-  <p>
-    Donut chocolate bar apple pie marshmallow jelly-o biscuit halvah oat cake. Macaroon cookie croissant candy soufflé sesame snaps oat cake gummi bears soufflé. Gummi bears sweet liquorice sugar plum. Candy oat cake oat cake. Icing topping toffee unerdwear.com. Cupcake halvah liquorice bonbon soufflé. Jelly beans muffin cupcake liquorice wafer chocolate chocolate cake. Sesame snaps sugar plum oat cake bonbon carrot cake bonbon candy gummies. Powder jelly marzipan fruitcake. Toffee candy canes dragée dessert biscuit jelly beans muffin fruitcake. Pie pastry jujubes halvah tart ice cream. Candy canes chocolate gummi bears muffin danish jelly-o.
-  </p>
-  <p>
-    Lemon drops liquorice sweet brownie gingerbread. Pudding gummi bears bonbon gingerbread sesame snaps tootsie roll. Caramels tart donut oat cake chupa chups halvah. Soufflé soufflé sugar plum topping toffee chocolate cake brownie jelly beans. Cotton candy soufflé tart cupcake macaroon powder carrot cake pudding. Lemon drops liquorice sweet roll sugar plum muffin croissant wafer danish. Gummi bears muffin cookie gummi bears cupcake biscuit ice cream. Brownie bear claw bear claw. Pie applicake powder. Gummi bears ice cream biscuit tootsie roll. Marzipan fruitcake toffee danish toffee. Oat cake tart topping gummi bears. Jujubes sweet roll sesame snaps chocolate bar. Marzipan chupa chups chupa chups chupa chups.
-  </p>
-  <p>
-    Brownie tiramisu carrot cake macaroon cake macaroon sesame snaps oat cake tart. Icing toffee carrot cake. Candy canes muffin applicake bear claw marshmallow bonbon. Danish lollipop oat cake chocolate marzipan. Danish brownie apple pie chocolate brownie cookie. Gummi bears icing croissant tootsie roll dessert liquorice sweet. Apple pie dessert sweet chocolate topping topping candy. Apple pie marshmallow cupcake chocolate bar sweet. Sugar plum apple pie dragée dragée cupcake applicake icing. Gingerbread jelly beans toffee macaroon. Sweet sweet roll tootsie roll soufflé cotton candy unerdwear.com pie bonbon. Bonbon tiramisu gummi bears icing pastry fruitcake candy muffin pastry.
-  </p>
-  <p>
-    Brownie wafer croissant donut caramels chocolate brownie apple pie. Powder candy sweet roll gummies lemon drops bonbon icing. Gummi bears applicake tiramisu candy sweet sweet roll jujubes sesame snaps. Sweet caramels croissant candy canes cupcake tootsie roll cookie bonbon oat cake. Donut bear claw macaroon toffee cotton candy cupcake caramels. Soufflé sugar plum brownie soufflé gingerbread lollipop brownie dragée. Sweet roll chocolate cake topping sugar plum jujubes pie croissant. Apple pie chocolate carrot cake gummi bears sugar plum brownie powder. Chocolate bar apple pie chocolate cake brownie applicake applicake oat cake. Bonbon oat cake dragée topping icing sweet. Jelly-o sweet roll unerdwear.com. Tiramisu liquorice lemon drops bonbon. Jelly sweet wafer chupa chups marzipan tiramisu. Danish topping tootsie roll bear claw powder croissant brownie cotton candy.
-  </p>
-  <p>
-    Oat cake jujubes carrot cake dessert donut cookie jujubes sweet macaroon. Tiramisu wafer jelly beans. Marzipan jelly beans wafer croissant biscuit jelly-o danish cookie. Bear claw sweet roll sweet roll marshmallow jelly-o. Cheesecake gingerbread sweet soufflé. Pudding applicake pastry. Wafer marshmallow oat cake. Donut cheesecake gummi bears sweet. Soufflé marzipan soufflé tiramisu sweet roll gummi bears applicake soufflé. Fruitcake jelly beans sweet roll marzipan donut biscuit marzipan cheesecake pastry. Sugar plum pastry gummi bears oat cake. Fruitcake icing icing donut wafer gummi bears carrot cake cookie dragée. Bonbon sweet roll marshmallow. Chocolate tootsie roll sugar plum unerdwear.com tart cake tiramisu candy canes jelly beans.
-  </p>
-</div>
+  <div class="row">
+
+    <div class="entry large-9 columns">
+      <h1 class="blog-title">Entry title</h1>
+      <div class="post_meta">
+        <ul>
+          <li>Posted By: Mic Funk</li>
+          <li>Posted on: Sep 30, 2013</li>
+          <li>Posted in: Labs, news, articles, people</li>
+        </ul>
+      </div>
+      <p>
+        Donut chocolate bar apple pie marshmallow jelly-o biscuit halvah oat cake. Macaroon cookie croissant candy soufflé sesame snaps oat cake gummi bears soufflé. Gummi bears sweet liquorice sugar plum. Candy oat cake oat cake. Icing topping toffee unerdwear.com. Cupcake halvah liquorice bonbon soufflé. Jelly beans muffin cupcake liquorice wafer chocolate chocolate cake. Sesame snaps sugar plum oat cake bonbon carrot cake bonbon candy gummies. Powder jelly marzipan fruitcake. Toffee candy canes dragée dessert biscuit jelly beans muffin fruitcake. Pie pastry jujubes halvah tart ice cream. Candy canes chocolate gummi bears muffin danish jelly-o.
+      </p>
+      <p>
+        Lemon drops liquorice sweet brownie gingerbread. Pudding gummi bears bonbon gingerbread sesame snaps tootsie roll. Caramels tart donut oat cake chupa chups halvah. Soufflé soufflé sugar plum topping toffee chocolate cake brownie jelly beans. Cotton candy soufflé tart cupcake macaroon powder carrot cake pudding. Lemon drops liquorice sweet roll sugar plum muffin croissant wafer danish. Gummi bears muffin cookie gummi bears cupcake biscuit ice cream. Brownie bear claw bear claw. Pie applicake powder. Gummi bears ice cream biscuit tootsie roll. Marzipan fruitcake toffee danish toffee. Oat cake tart topping gummi bears. Jujubes sweet roll sesame snaps chocolate bar. Marzipan chupa chups chupa chups chupa chups.
+      </p>
+      <p>
+        Brownie tiramisu carrot cake macaroon cake macaroon sesame snaps oat cake tart. Icing toffee carrot cake. Candy canes muffin applicake bear claw marshmallow bonbon. Danish lollipop oat cake chocolate marzipan. Danish brownie apple pie chocolate brownie cookie. Gummi bears icing croissant tootsie roll dessert liquorice sweet. Apple pie dessert sweet chocolate topping topping candy. Apple pie marshmallow cupcake chocolate bar sweet. Sugar plum apple pie dragée dragée cupcake applicake icing. Gingerbread jelly beans toffee macaroon. Sweet sweet roll tootsie roll soufflé cotton candy unerdwear.com pie bonbon. Bonbon tiramisu gummi bears icing pastry fruitcake candy muffin pastry.
+      </p>
+      <p>
+        Brownie wafer croissant donut caramels chocolate brownie apple pie. Powder candy sweet roll gummies lemon drops bonbon icing. Gummi bears applicake tiramisu candy sweet sweet roll jujubes sesame snaps. Sweet caramels croissant candy canes cupcake tootsie roll cookie bonbon oat cake. Donut bear claw macaroon toffee cotton candy cupcake caramels. Soufflé sugar plum brownie soufflé gingerbread lollipop brownie dragée. Sweet roll chocolate cake topping sugar plum jujubes pie croissant. Apple pie chocolate carrot cake gummi bears sugar plum brownie powder. Chocolate bar apple pie chocolate cake brownie applicake applicake oat cake. Bonbon oat cake dragée topping icing sweet. Jelly-o sweet roll unerdwear.com. Tiramisu liquorice lemon drops bonbon. Jelly sweet wafer chupa chups marzipan tiramisu. Danish topping tootsie roll bear claw powder croissant brownie cotton candy.
+      </p>
+      <p>
+        Oat cake jujubes carrot cake dessert donut cookie jujubes sweet macaroon. Tiramisu wafer jelly beans. Marzipan jelly beans wafer croissant biscuit jelly-o danish cookie. Bear claw sweet roll sweet roll marshmallow jelly-o. Cheesecake gingerbread sweet soufflé. Pudding applicake pastry. Wafer marshmallow oat cake. Donut cheesecake gummi bears sweet. Soufflé marzipan soufflé tiramisu sweet roll gummi bears applicake soufflé. Fruitcake jelly beans sweet roll marzipan donut biscuit marzipan cheesecake pastry. Sugar plum pastry gummi bears oat cake. Fruitcake icing icing donut wafer gummi bears carrot cake cookie dragée. Bonbon sweet roll marshmallow. Chocolate tootsie roll sugar plum unerdwear.com tart cake tiramisu candy canes jelly beans.
+      </p>
+    </div>
+
+    <div class="blog-sidebar large-3 columns">
+      <ul>
+        <li class='sidebar_title'><h3>Recent Posts</h3></li>
+        <a href="#"><li>I am a recent post</li></a>
+        <a href="#"><li>I am a recent post</li></a>
+        <a href="#"><li>I am a recent post</li></a>
+        <a href="#"><li>I am a recent post</li></a>
+      </ul>
+      <ul>
+        <li class='sidebar_title'><h3>Catgories Posts</h3></li>
+        <a href="#"><li>some Category</li></a>
+        <a href="#"><li>some Category</li></a>
+        <a href="#"><li>some Category</li></a>
+        <a href="#"><li>some Category</li></a>
+      </ul>
+      <ul>
+        <li class='sidebar_title'><h3>Archives</h3></li>
+        <a href="#"><li>Jan 2013</li></a>
+        <a href="#"><li>Feb 2013</li></a>
+        <a href="#"><li>Mar 2013</li></a>
+        <a href="#"><li>April 2013</li></a>
+      </ul>
+    </div>
+  </div>
 </div>
 
-<div class="blog-sidebar">
-
-</div>
 
 <%= render 'partials/footer' %>
