--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,39 +1,20 @@
-<footer>
-  <div class="footer row">
-    <nav class="footer_nav large-12 large-centered columns">
-      <ul class="title-nav">
-        <li>
-          <a class="title">One thing</a>
-          <ul class="footer-sub-nav">
-            <li>
-              <a href="#"> FAQs </a>
-            </li>
-            <li>
-              <a href="#">Policies</a>
-            </li>
-            <li>
-              <a href ="#">Birds</a>
-            </li>
-          </ul>
-        </li>
-        <li>
-          <a href="#">Other thing</a>
-        </li>
-        <li>
-          <a href="#">Another thing</a>
-        </li>
-        <li>
-          <a href="#">More things</a>
-        </li>
-        <li>
-          <a href="#">blerp</a>
-        </li>
-        <li>
-          <a href="#">beelp</a>
-        </li>
-      </ul>
-    </nav>
+  <footer>
+  <div class="hiring align-center full-width white">
+    <h2>We're Hiring. Click here to Join the Team!</h2>
   </div>
-</footer>
+    <div class="footer row">
+      <div class="large-12 columns">
+        <div class="large-3 columns">
+            Footer area 1
+        </div>
+        <div class="large-6 columns">
+            Footer area 2
+        </div>
+        <div class="large-3 columns">
+            footer area 3
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
