--- a/app/assets/stylesheets/_homepage.scss
+++ b/app/assets/stylesheets/_homepage.scss
@@ -3,8 +3,8 @@ header {
 	background-color: white;
 	position: fixed;
 	top: 0;
-	left: 0; 
-	z-index: 9999999; 
+	left: 0;
+	z-index: 9999999;
 	&.upcoming-events {
 		position: relative;
 		z-index: 2;
@@ -16,13 +16,13 @@ header {
 		overflow: hidden;
 		width: 62.5em;
 		.nav-logo {
-			float: left;	
+			float: left;
 			position: relative;
 		}
 		nav {
 			float: right;
 			position: relative;
-			width: 70%; 
+			width: 70%;
 			ul {
 				display: inline;
 				margin-top: 30px;
@@ -44,7 +44,7 @@ header {
 .intro {
 	padding: 60px 30px;
 	background-image: url('http://lorempixel.com/g/1920/600/abstract');
-	background-position: center; 
+	background-position: center;
 	background-repeat: repeat;
 	width: 100%;
 	height: 600px;
@@ -90,7 +90,7 @@ header {
 	background-color: #ddd;
 	position: relative;
 	z-index: 10;
-	
+
 	img {
 		padding: 10px;
 	}
@@ -107,47 +107,12 @@ header {
 }
 
 .box-4 {
-	padding: 100px 0;
-	background-color: #aaa;
+	padding: 50px 0;
+	background-color: #e9eaea;
 	position: relative;
 	z-index: 10;
 	img {
 		padding: 10px;
-	}
-}
-
-footer {
-	position: relative;
-	z-index: 10;
-	height: 300px;
-	background-color: #ddd; 
-	padding: 70px 0;
-	.footer_nav {
-		ul.title-nav {
-			display: inline;
-			li {
-				float: left;
-				padding: 0 25px;
-				list-style-type: none;
-				a.title {
-					font-size: 18px;
-					color: #aaa;
-					text-transform: uppercase;
-					border-bottom: 1px solid #aaa;
-					h3{
-						font-size: 18px;
-					}
-
-				}
-				ul.footer-sub-nav {
-					display: block;
-					li {
-						float: none;
-						padding: 5px 0;
-					}
-				}
-			}
-		}
 	}
 }
 
