--- a/app/assets/stylesheets/_how-we-work.scss
+++ b/app/assets/stylesheets/_how-we-work.scss
@@ -1,7 +1,7 @@
 .intro-how-we-work {
 	padding: 60px 30px;
 	background-image: url('http://lorempixel.com/g/1920/400/abstract');
-	background-position: center; 
+	background-position: center;
 	background-repeat: repeat;
 	width: 100%;
 	height: 400px;
@@ -25,6 +25,9 @@
 
 .our-values {
 	padding: 75px 0;
+	.how-we-work-intro {
+		text-align: center;
+	}
 	.value-item {
 		margin: 25px 0 55px 0;
 		.value-title {
