--- a/app/assets/stylesheets/_our-blog.scss
+++ b/app/assets/stylesheets/_our-blog.scss
@@ -6,7 +6,7 @@ header {
 			li {
 				float: left;
 				padding: 0 10px;
-				list-style-type: none; 
+				list-style-type: none;
 				a {
 					h3{
 						font-size: 14px;
@@ -18,6 +18,10 @@ header {
 	}
 }
 
+.blog_wrapper {
+	clear: both;
+	padding-top: 200px;
+}
 
 .blog-intro {
 	margin-bottom: 80px;
