--- a/app/assets/stylesheets/_who-we-are.scss
+++ b/app/assets/stylesheets/_who-we-are.scss
@@ -1,8 +1,37 @@
 .people {
 	margin-top: 50px;
-	.person {
+	.people_picture {
+		-webkit-border-radius: 150px;
+		border-radius: 150px;
+	}
+	.people_image {
+		display: block;
+		margin: 25px auto 0 auto;
+		-webkit-border-radius: 150px;
+		border-radius: 150px;
+
+	}
+	.image_overlay {
+		display: none;
+		position: absolute;
+		top: 0px;
+		z-index: 100000000;
+		background-color: rgba(47, 47, 47, .8);
+		width: 250px;
+		height: 250px;
+		overflow: hidden;
+		color: white;
+		-webkit-border-radius: 150px;
+		border-radius: 150px;
+	}
+	ul li {
+		position: relative;
 		text-align: center;
-		padding: 40px 20px;
+		padding: 60px;
+
+	}
+	li:hover .image_overlay {
+		display: block;
 	}
 }
 
@@ -23,7 +52,7 @@
 .intro-who-we-are {
 	padding: 60px 30px;
 	background-image: url('http://lorempixel.com/g/1920/400/people');
-	background-position: center; 
+	background-position: center;
 	background-repeat: repeat;
 	width: 100%;
 	height: 400px;
@@ -46,7 +75,7 @@
 }
 
 .info-box-who-we-are {
-	background-color: #eee; 
+	background-color: #eee;
 	h2 {
 		font-size: 36px;
 	}
