--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,3 +1,34 @@
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+/* universal and helper classes */
+
+h2.intro-title {
+  text-align: center;
+  font-size: 36px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  line-height: 4em;
+}
+
+/* align text to the center */
+.align-center {
+  text-align: center;
+}
+
+/* make images into circles */
+
+.fifty-radius {
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.white {
+  /*make text white, override everythig else */
+  color: white !important;
+}
