--- a/app/views/pages/our_blog.html.erb
+++ b/app/views/pages/our_blog.html.erb
@@ -1,6 +1,9 @@
 <%= render 'partials/header' %>
 
- <div class="blog_wrapper">
+ <div class="padder">
+
+  <%= render 'partials/blog_header' %>
+
   <div class="blog-intro row">
      <div class="blog-entry large-4 columns">
        <img src="http://placehold.it/100x100">
