--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -1,33 +1,29 @@
-<header class="nav-thing">
-  <div class="row mics-thing">
-    <div class="nav-logo">
+<header class="main">
+  <div class="row">
+    <div class="large-3 columns nav-logo">
       <a href="/">
-        <h1> Bendyworks</h1>
+        <h1>Bendyworks</h1>
       </a>
     </div>
-    <div class="bleep">
-      <nav>
+      <nav class="large-9 columns">
         <ul>
           <li class="name">
-            <a href="/our_work"><h3>Our Work</h3></a>
+            <a href="/our_work">Our Work</a>
           </li>
           <li>
-            <a href="/how_we_work"><h3>Company</h3></a>
-          </li>
-
-          <li>
-            <a href="/our_blog"><h3>Our Blog</h3></a>
+            <a href="/how_we_work">Company</a>
           </li>
           <li>
-            <a href="/community"><h3>Community</h3></a>
+            <a href="/community">Community</a>
           </li>
-
           <li>
-            <a href="/contact"><h3>Contact</h3></a>
+            <a href="/our_blog">Our Blog</a>
+          </li>
+          <li>
+            <a href="/contact">Contact</a>
           </li>
         </ul>
       </nav>
-    </div>
   </div>
 </header>
 
