WIP: Bendyworks Prototype

--- a/app/assets/stylesheets/_community.scss
+++ b/app/assets/stylesheets/_community.scss
@@ -39,6 +39,14 @@
 	}
 }
 
+.highlight {
+	background-color: #d8f0f4;
+}
+
+.lowlight * {
+	color: #bdbdbd;
+}
+
 .blog-oss-content {
 	background-color: #eee;
 	padding: 75px 10px;
