--- a/app/assets/stylesheets/_our-blog.scss
+++ b/app/assets/stylesheets/_our-blog.scss
@@ -3,6 +3,11 @@
 	padding-top: 200px;
 }
 
+.blog-entry {
+	padding-left: 25px !important;
+	padding-right: 25px !important;
+}
+
 .blog-intro {
 	margin-bottom: 80px;
 	margin-top: 150px;
