--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -75,14 +75,14 @@
 </div>
 
 
-	<div class="full-width">
+	<div class="full-width bg-white top">
 		<div class="row">
 			<div class="large-12 columns">
 				<div class="home-box-content large-12 columns">
 					<h2 class="intro-title">
 						From Our Blog
 					</h2>
-				<%= render 'partials/featured_posts' %>
+						<%= render 'partials/featured_posts' %>
 				</div>
 			</div>
 		</div>
