--- a/app/views/pages/community.html.erb
+++ b/app/views/pages/community.html.erb
@@ -1,172 +1,284 @@
 <%= render 'partials/header' %>
-
-<div class="not-home-hero-image">
-  <div class="intro-content">
-    <div class="intro-community">
-      <div class="row">
-        <div class="current-events left large-6 columns">
-          <a href="#" class="date-content">
-            <header class="upcoming-events">Upcoming Event</header>
-            <h2 class="date">FEB 02</h2>
-            <h4 class="date-description">Cras quis turpis venenatis, malesuada nisi a, dapibus velit. Quisque non tincidunt arcu. Proin eget mi augue. Ut nec laoreet diam.</h4>
-          </a>
-        </div>
-        <div class="intro-content right large-6 columns">
-          <h2 class="intro-title">
-            Community.
-          </h2>
-          <h4 class="sub-title">
-           Ut sit amet enim eu tellus convallis semper ac sed dolor. Donec sodales in risus vel gravida. Sed blandit elit in lobortis fringilla. Proin.
-         </h4>
-       </div>
-     </div>
+<div class="padder">
+ <div class="hero">
+   <div class="row">
+     <div class="large-8 push-4 columns">
+       <h2 class="white">
+         Community
+       </h2>
+       <h4 class="white">
+Cras quis turpis venenatis, malesuada nisi a, dapibus velit. Quisque non tincidunt arcu. Proin eget mi augue. Ut nec laoreet diam.        </h4>
+    </div>
    </div>
  </div>
 
-<section class="blog-oss-content">
-  <div class="row">
-    <div  class="large-12 large-centered columns oss-title">
-    <h1>We Heart Open Source</h1>
-  </div>
-  <div class="row">
-    <div class="community-oss large-12 columns">
-      <ul class="large-block-grid-5">
-        <li>
-          <img src="http://placehold.it/150x150">
-          <h3>Open Source Project</h3>
-        </li>
-        <li>
-          <img src="http://placehold.it/150x150">
-          <h3>Open Source Project</h3>
-        </li>
-        <li>
-          <img src="http://placehold.it/150x150">
-          <h3>Open Source Project</h3>
-        </li>
-          <li>
-          <img src="http://placehold.it/150x150">
-          <h3>Open Source Project</h3>
-        </li>
-        <li>
-          <img src="http://placehold.it/150x150">
-          <h3>Open Source Project</h3>
-        </li>
-      </ul>
+  <section class="events-block row pad">
+    <h2 class="align-center pad">Upcoming Events</h2>
+
+    <div class="current-events large-6 columns">
+
+      <a href="#" class="date-content">
+        <h2 class="date">FEB 02</h2>
+        <h4 class="date-description">Cras quis turpis venenatis, malesuada nisi a, dapibus velit. Quisque non tincidunt arcu. Proin eget mi augue. Ut nec laoreet diam.</h4>
+      </a>
+    </div>
+    <div class="other-events-1 large-3 columns">
+      <a href="#" class="date-content">
+        <h3 class="date">September 10</h3>
+        <h5 class="date-description">Cras quis turpis venenatis, malesuada nisi a, dapibus velit. Quisque non tincidunt arcu. Proin eget mi augue. Ut nec laoreet diam.</h5>
+      </a>
+    </div>
+    <div class="other-events-2 large-3 columns">
+      <a href="#" class="date-content">
+        <h3 class="date">October 15</h3>
+        <h5 class="date-description">Cras quis turpis venenatis, malesuada nisi a, dapibus velit. Quisque non tincidunt arcu. Proin eget mi augue. Ut nec laoreet diam.</h5>
+      </a>
+    </div>
+  </section>
+
+   <section class="blog-oss-content">
     <div class="row">
-
-    <a href="#" class="button radius">See All Our Projects on Github</a>
-        <a href="#" class="button radius">Visit Upward</a>
-  </div>
-</section><!-- end of first section -->
-
-
-
-
-
-<section class="meetup-content">
-  <div class="row">
-      <ul class="large-block-grid-3 small-block-grid-2">
-        <li>
-          <img src="http://placehold.it/300x300">
-          <h3>UXMad</h3>
-        </li>
-        <li>
-          <img src="http://placehold.it/300x300">
-          <h3>Cocoaheads</h3>
-        </li>
-        <li>
-          <img src="http://placehold.it/300x300">
-          <h3>MadRailers</h3>
-        </li>
-        <li>
-          <img src="http://placehold.it/300x300">
-          <h3>UX Book Club</h3>
-        </li>
-        <li>
-          <img src="http://placehold.it/300x300">
-          <h3>Mad Clojure</h3>
-        </li>
-        <li>
-          <img src="http://placehold.it/300x300">
-          <h3>MadPug</h3>
-        </li>
-
-      </ul>
-  </div>
-</section>
-
-<div class="speaking-meetup large-12 columns">
-      <div class="community-speaking large-6 columns">
-       <div class="speaking-title"><h2>Speaking Events</h2></div>
-       <ul class="community-speaking-list">
-        <li class="speaking-list-item">
-          <a href="#">
-            <h3 class="name">Matt Gauger</h3>
-          </a>
-          <a href="#">
-            <h3>Madison Ruby</h3>
-          </a>
-          <h4>Madison, WI</h4>
-          <h4>July 25, 2014<h4>
-
-          </li>
-          <li class="speaking-list-item">
-            <a href="#">
-              <h3 class="name">Brad Grzesiak</h3>
-            </a>
-            <a href="#">
-              <h3>SNOW MOBILE</h3>
-            </a>
-            <h4>Madison, WI</h4>
-            <h4>January 25, 2014<h4>
-
+      <div  class="large-12 large-centered columns">
+        <h2 class="align-center pad">We Heart Open Source</h2>
+      </div>
+      <div class="row">
+        <div class="community-oss large-12 columns">
+          <ul class="large-block-grid-5">
+            <li>
+              <img src="http://placehold.it/150x150">
+              <h3>Open Source Project</h3>
             </li>
-            <li class="speaking-list-item">
-              <a href="#">
-                <h3 class="name">Mic Funk</h3>
-              </a>
-              <a href="#">
-                <h3>UX MAD</h3>
-              </a>
-              <h4>Madison, WI</h4>
-              <h4>January 25, 2014<h4>
+            <li>
+              <img src="http://placehold.it/150x150">
+              <h3>Open Source Project</h3>
+            </li>
+            <li>
+              <img src="http://placehold.it/150x150">
+              <h3>Open Source Project</h3>
+            </li>
+            <li>
+              <img src="http://placehold.it/150x150">
+              <h3>Open Source Project</h3>
+            </li>
+            <li>
+              <img src="http://placehold.it/150x150">
+              <h3>Open Source Project</h3>
+            </li>
+          </ul>
+          <div class="row">
 
+            <a href="#" class="button radius">See All Our Projects on Github</a>
+            <a href="#" class="button radius">Visit Upward</a>
+          </div>
+        </section><!-- end of first section -->
+
+
+
+
+
+        <section class="meetup-content full-width pad">
+          <div class="row">
+            <h2 class="align-center pad">Sponsored/Hosted Meetups</h2>
+            <ul class="large-block-grid-3 small-block-grid-2">
+              <li>
+                <img src="http://placehold.it/300x300">
+                <h3>UXMad</h3>
+                <p>Third Thursday of Month</p>
               </li>
-              <li class="speaking-list-item">
-                <a href="#">
-                  <h3 class="name">Ian Cordasco</h3>
-                </a>
-                <a href="#">
-                  <h3>PYCON</h3>
-                </a>
-                <h4>Madison, WI</h4>
-                <h4>January 25, 2014<h4>
+              <li>
+                <img src="http://placehold.it/300x300">
+                <h3>Cocoaheads</h3>
+                <p>Third Thursday of Month</p>
+              </li>
+              <li>
+                <img src="http://placehold.it/300x300">
+                <h3>MadRailers</h3>
+                <p>Third Thursday of Month</p>
+              </li>
+              <li>
+                <img src="http://placehold.it/300x300">
+                <h3>UX Book Club</h3>
+                <p>Third Thursday of Month</p>
+              </li>
+              <li>
+                <img src="http://placehold.it/300x300">
+                <h3>Mad Clojure</h3>
+                <p>Third Thursday of Month</p>
+              </li>
+              <li>
+                <img src="http://placehold.it/300x300">
+                <h3>MadPug</h3>
+                <p>Third Thursday of Month</p>
+              </li>
 
+            </ul>
+          </div>
+        </section>
+
+        <div class="full-width light-gray pad">
+          <div class="row">
+            <h2 class="align-center pad">Speaking</h2>
+            <ul class="large-block-grid-6 small-block-grid-2">
+              <li class="highlight pad">
+                <h5>Software Craftmanship’s Missing Link: Apprenticeship</h5>
+                <em class="name">Matt Gauger</em>
+                <a href="#">
+                  <p>Nickel City Ruby</p>
+                </a>
+                <p>Madison, WI, July 25, 2014</p>
+              </li>
+              <li class="highlight pad">
+                <h5>Software Craftmanship’s Missing Link: Apprenticeship</h5>
+                <em class="name">Matt Gauger</em>
+                <a href="#">
+                  <p>Nickel City Ruby</p>
+                </a>
+                <p>Madison, WI, July 25, 2014</p>
+              </li>
+              <li class="highlight pad">
+                <h5>Software Craftmanship’s Missing Link: Apprenticeship</h5>
+                <em class="name">Matt Gauger</em>
+                <a href="#">
+                  <p>Nickel City Ruby</p>
+                </a>
+                <p>Madison, WI, July 25, 2014</p>
+              </li>
+              <li class="lowlight pad">
+                <h5>Software Craftmanship’s Missing Link: Apprenticeship</h5>
+                <em class="name">Matt Gauger</em>
+                <a href="#">
+                  <p>Nickel City Ruby</p>
+                </a>
+                <p>Madison, WI, July 25, 2014</p>
+              </li>
+              <li class="lowlight pad">
+                <h5>Software Craftmanship’s Missing Link: Apprenticeship</h5>
+                <em class="name">Matt Gauger</em>
+                <a href="#">
+                  <p>Nickel City Ruby</p>
+                </a>
+                <p>Madison, WI, July 25, 2014</p>
+              </li>
+              <li class="lowlight pad">
+                <h5>Software Craftmanship’s Missing Link: Apprenticeship</h5>
+                <em class="name">Matt Gauger</em>
+                <a href="#">
+                  <p>Nickel City Ruby</p>
+                </a>
+                <p>Madison, WI, July 25, 2014</p>
+              </li>
+              <li class="lowlight pad">
+                <h5>Software Craftmanship’s Missing Link: Apprenticeship</h5>
+                <em class="name">Matt Gauger</em>
+                <a href="#">
+                  <p>Nickel City Ruby</p>
+                </a>
+                <p>Madison, WI, July 25, 2014</p>
+              </li>
+              <li class="lowlight pad">
+                <h5>Software Craftmanship’s Missing Link: Apprenticeship</h5>
+                <em class="name">Matt Gauger</em>
+                <a href="#">
+                  <p>Nickel City Ruby</p>
+                </a>
+                <p>Madison, WI, July 25, 2014</p>
+              </li>
+              <li class="lowlight pad">
+                <h5>Software Craftmanship’s Missing Link: Apprenticeship</h5>
+                <em class="name">Matt Gauger</em>
+                <a href="#">
+                  <p>Nickel City Ruby</p>
+                </a>
+                <p>Madison, WI, July 25, 2014</p>
+              </li>
+              <li class="lowlight pad">
+                <h5>Software Craftmanship’s Missing Link: Apprenticeship</h5>
+                <em class="name">Matt Gauger</em>
+                <a href="#">
+                  <p>Nickel City Ruby</p>
+                </a>
+                <p>Madison, WI, July 25, 2014</p>
+              </li>
+              <li class="lowlight pad">
+                <h5>Software Craftmanship’s Missing Link: Apprenticeship</h5>
+                <em class="name">Matt Gauger</em>
+                <a href="#">
+                  <p>Nickel City Ruby</p>
+                </a>
+                <p>Madison, WI, July 25, 2014</p>
+              </li>
+              <li class="lowlight pad">
+                <h5>Software Craftmanship’s Missing Link: Apprenticeship</h5>
+                <em class="name">Matt Gauger</em>
+                <a href="#">
+                  <p>Nickel City Ruby</p>
+                </a>
+                <p>Madison, WI, July 25, 2014</p>
+              </li>
+
+
+            </ul>
+          </div>
+        </div>
+
+        <section class="press-content">
+          <div class="row">
+            <div class="large-6 columns">
+              <h2 class="align-center">Blogs</h2>
+              <ul>
+                <li>
+                  <a href="#" class="press-link">
+                    <h5>New and Exciting Features Planned for Python 3.4</h5>
+                  </a>
+                  <em>Ian Cordasco</em>
+                  <p>The Changelog</p>
                 </li>
+                <li>
+                  <a href="#" class="press-link">
+                    <h5>Zero: A Wrapper Around the ØMQ Python Library</h5>
+                  </a>
+                  <em>Ian Cordasco</em>
+                  <p>The Changelog</p>
+                </li>
+                <li>
+                  <a href="#" class="press-link">
+                    <h5>Requests 2.0 coming soon with proxy support and bug fixes</h5>
+                  </a>
+                  <em>Ian Cordasco</em>
+                  <p>The Changelog</p>
+                </li>
+
+                <li>
+                  <a href="#" class="press-link">
+                    <h5>Rich Hickey’s Greatest Hits</h5>
+                  </a>
+                  <em>Ian Cordasco</em>
+                  <p>The Changelog</p>
+                </li>
+
               </ul>
             </div>
-                      <section class="press-content">
-                        <div class="row">
-                          <div class="press large-12 columns">
-                            <div class="press-title"><h2>Press</h2></div>
-                            <ul class="press-list">
-                              <li>
-                                <a href="#" class="press-link">
-                                  <h3>How did F. Stokes end up playing a gig at Bendyworks' downtown Madison office?</h3>
-                                  <p>When asked why the software development firm Bendyworks hosted a spontaneous hip-hop gig from Madison native F. Stokes in its downtown Madison offices Monday night, Jim Remsik, one of the firm's principals, eagerly offers up absolutely no justification.</p>
-                                </a>
-                              </li>
-                              <li>
-                                <a href="#" class="press-link">
-                                  <h3>Incubating magazine literacy at Bendyworks</h3>
-                                  <p>We’ve just moved in to a fabulous incubation space at Bendyworks, an agile technology juggernaut in Madison, WI.</p>
-                                </a>
-                              </li>
-                            </ul>
-                          </div>
-                        </div>
-                      </section><!-- end of third row  -->
+            <div class="large-6 columns">
+             <h2 class="align-center">Press</h2>
+             <ul>
+              <li>
+                <a href="#" class="press-link">
+                  <em>The Daily Page</em>
+                  <h5>How did F. Stokes end up playing a gig at Bendyworks' downtown Madison office?</h5>
+                </a>
+                <p>When asked why the software development firm Bendyworks hosted a spontaneous hip-hop gig from Madison native F. Stokes in its downtown Madison offices Monday night, Jim Remsik, one of the firm's principals, eagerly offers up absolutely no justification.</p>
+              </li>
+              <li>
+                <a href="#" class="press-link">
+                  <em>Magazine Literacy</em>
+                  <h5>Incubating magazine literacy at Bendyworks</h5>
+                </a>
+                <p>We’ve just moved in to a fabulous incubation space at Bendyworks, an agile technology juggernaut in Madison, WI.</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section><!-- end of third row  -->
+    </div>
 
-
-
-                      <%= render 'partials/footer' %>
+    <%= render 'partials/footer' %>
