--- a/app/views/pages/our_blog.html.erb
+++ b/app/views/pages/our_blog.html.erb
@@ -5,90 +5,44 @@
   <%= render 'partials/blog_header' %>
 
   <div class="blog-intro row">
-     <div class="blog-entry large-4 columns">
-       <img src="http://placehold.it/100x100">
+     <div class="blog-entry pad large-4 columns">
+       <img src="http://placehold.it/200x200">
        <div class="blog-title">
-         <h2>
+         <h3>
            Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
-         </h2>
+         </h3>
          <div class="sub-headline">
-            <h4>
+            <p>
            acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
-           </h4>
+           </p>
          </div>
          <a href="/our_blog_deep" class="button">Read More</a>
        </div>
      </div>
-     <div class="blog-entry large-4 columns">
-       <img src="http://placehold.it/100x100">
+     <div class="blog-entry pad large-4 columns">
+       <img src="http://placehold.it/200x200">
        <div class="blog-title">
-         <h2>
+         <h3>
            Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
-         </h2>
+         </h3>
          <div class="sub-headline">
-            <h4>
+            <p>
            acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
-           </h4>
+           </p>
          </div>
          <a href="/our_blog_deep" class="button">Read More</a>
        </div>
      </div>
-     <div class="blog-entry large-4 columns">
-       <img src="http://placehold.it/100x100">
+     <div class="blog-entry pad large-4 columns">
+       <img src="http://placehold.it/200x200">
        <div class="blog-title">
-         <h2>
+         <h3>
            Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
-         </h2>
+         </h3>
          <div class="sub-headline">
-            <h4>
+            <p>
            acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
-           </h4>
-         </div>
-         <a href="/our_blog_deep" class="button">Read More</a>
-       </div>
-     </div>
-   </div>
-
-
-     <div class="blog-intro row">
-     <div class="blog-entry large-4 columns">
-       <img src="http://placehold.it/100x100">
-       <div class="blog-title">
-         <h2>
-           Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
-         </h2>
-         <div class="sub-headline">
-            <h4>
-           acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
-           </h4>
-         </div>
-         <a href="/our_blog_deep" class="button">Read More</a>
-       </div>
-     </div>
-     <div class="blog-entry large-4 columns">
-       <img src="http://placehold.it/100x100">
-       <div class="blog-title">
-         <h2>
-           Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
-         </h2>
-         <div class="sub-headline">
-            <h4>
-           acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
-           </h4>
-         </div>
-         <a href="/our_blog_deep" class="button">Read More</a>
-       </div>
-     </div>
-     <div class="blog-entry large-4 columns">
-       <img src="http://placehold.it/100x100">
-       <div class="blog-title">
-         <h2>
-           Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
-         </h2>
-         <div class="sub-headline">
-            <h4>
-           acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
-           </h4>
+           </p>
          </div>
          <a href="/our_blog_deep" class="button">Read More</a>
        </div>
@@ -97,44 +51,90 @@
 
 
      <div class="blog-intro row">
-     <div class="blog-entry large-4 columns">
-       <img src="http://placehold.it/100x100">
+     <div class="blog-entry pad large-4 columns">
+       <img src="http://placehold.it/200x200">
        <div class="blog-title">
-         <h2>
+         <h3>
            Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
-         </h2>
+         </h3>
          <div class="sub-headline">
-            <h4>
+            <p>
            acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
-           </h4>
+           </p>
          </div>
          <a href="/our_blog_deep" class="button">Read More</a>
        </div>
      </div>
-     <div class="blog-entry large-4 columns">
-       <img src="http://placehold.it/100x100">
+     <div class="blog-entry pad large-4 columns">
+       <img src="http://placehold.it/200x200">
        <div class="blog-title">
-         <h2>
+         <h3>
            Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
-         </h2>
+         </h3>
          <div class="sub-headline">
-            <h4>
+            <p>
            acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
-           </h4>
+           </p>
          </div>
          <a href="/our_blog_deep" class="button">Read More</a>
        </div>
      </div>
-     <div class="blog-entry large-4 columns">
-       <img src="http://placehold.it/100x100">
+     <div class="blog-entry pad large-4 columns">
+       <img src="http://placehold.it/200x200">
        <div class="blog-title">
-         <h2>
+         <h3>
            Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
-         </h2>
+         </h3>
          <div class="sub-headline">
-            <h4>
+            <p>
            acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
-           </h4>
+           </p>
+         </div>
+         <a href="/our_blog_deep" class="button">Read More</a>
+       </div>
+     </div>
+   </div>
+
+
+     <div class="blog-intro row">
+     <div class="blog-entry pad large-4 columns">
+       <img src="http://placehold.it/200x200">
+       <div class="blog-title">
+         <h3>
+           Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
+         </h3>
+         <div class="sub-headline">
+            <p>
+           acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
+           </p>
+         </div>
+         <a href="/our_blog_deep" class="button">Read More</a>
+       </div>
+     </div>
+     <div class="blog-entry pad large-4 columns">
+       <img src="http://placehold.it/200x200">
+       <div class="blog-title">
+         <h3>
+           Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
+         </h3>
+         <div class="sub-headline">
+            <p>
+           acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
+           </p>
+         </div>
+         <a href="/our_blog_deep" class="button">Read More</a>
+       </div>
+     </div>
+     <div class="blog-entry pad large-4 columns">
+       <img src="http://placehold.it/200x200">
+       <div class="blog-title">
+         <h3>
+           Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
+         </h3>
+         <div class="sub-headline">
+            <p>
+           acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
+           </p>
          </div>
          <a href="/our_blog_deep" class="button">Read More</a>
        </div>
