--- a/app/views/pages/our_work.html.erb
+++ b/app/views/pages/our_work.html.erb
@@ -1,21 +1,18 @@
 <%= render 'partials/header' %>
-
-  <div class="hero-image">
-    <div class="intro-content">
-      <div class="intro our-work">
-        <div class="row">
-          <div class="intro-content right large-6 columns">
-            <h2 class="intro-title">
-              Our Work.
-            </h2>
-            <p class="sub-title">
-             Ut sit amet enim eu tellus convallis semper ac sed dolor. Donec sodales in risus vel gravida. Sed blandit elit in lobortis fringilla. Proin.
-           </p>
-         </div>
-       </div>
-     </div>
+<div class="padder">
+ <div class="hero">
+   <div class="row">
+     <div class="large-8 push-4 columns">
+       <h2 class="white">
+         Work
+       </h2>
+       <h4 class="white">
+        Browse our case studies to see how we turn great ideas into charming experiences and elegant applications.
+       </h4>
+    </div>
    </div>
-  </div>
+ </div>
+
 
    <div class="work-box two">
     <div class="row">
@@ -27,7 +24,7 @@
           <p class"sub-title-2">
             Phasellus mi ipsum, sagittis sit amet lectus sit amet, laoreet porttitor sapien. Mauris et odio molestie, vulputate orci ut, pharetra tellus. Donec vel porta ipsum. Nulla id sagittis risus. Donec interdum nisl at est mattis, ac venenatis quam luctus. Vivamus pharetra tortor ac blandit eleifend. Ut sed est quis ligula gravida fringilla.
           </p>
-          <a href="#" class="button work-button">Read More</a>
+          <a href="/case_study_single" class="button work-button">Read More</a>
         </div>
 
 
@@ -52,7 +49,7 @@
           <p class"sub-title-2">
             Phasellus mi ipsum, sagittis sit amet lectus sit amet, laoreet porttitor sapien. Mauris et odio molestie, vulputate orci ut, pharetra tellus. Donec vel porta ipsum. Nulla id sagittis risus. Donec interdum nisl at est mattis, ac venenatis quam luctus. Vivamus pharetra tortor ac blandit eleifend. Ut sed est quis ligula gravida fringilla.
           </p>
-          <a href="#" class="button work-button">Read More</a>
+          <a href="/case_study_single" class="button work-button">Read More</a>
         </div>
       </div>
     </div>
@@ -69,7 +66,7 @@
           <p class"sub-title-2">
             Phasellus mi ipsum, sagittis sit amet lectus sit amet, laoreet porttitor sapien. Mauris et odio molestie, vulputate orci ut, pharetra tellus. Donec vel porta ipsum. Nulla id sagittis risus. Donec interdum nisl at est mattis, ac venenatis quam luctus. Vivamus pharetra tortor ac blandit eleifend. Ut sed est quis ligula gravida fringilla.
           </p>
-          <a href="#" class="button work-button">Read More</a>
+          <a href="/case_study_single" class="button work-button">Read More</a>
         </div>
 
 
@@ -87,39 +84,39 @@
           <div class="client-title large-12 columns">Some of our Clients!</div>
           <ul>
             <li class="large-3 columns">
-              <a href="#">MOZ</a>
+              <a href="/case_study_single">MOZ</a>
             </li>
             <li class="large-3 columns">
-              <a href="#">Getty Images</a>
+              <a href="/case_study_single">Getty Images</a>
             </li>
             <li class="large-3 columns">
-              <a href="#">Crane Communications</a>
+              <a href="/case_study_single">Crane Communications</a>
             </li>
             <li class="large-3 columns">
-              <a href="#">Improv Effect</a>
+              <a href="/case_study_single">Improv Effect</a>
             </li>
             <li class="large-3 columns">
-              <a href="#">StoryFirst Media</a>
+              <a href="/case_study_single">StoryFirst Media</a>
             </li>
             <li class="large-3 columns">
-              <a href="#">Pabst Theater</a>
+              <a href="/case_study_single">Pabst Theater</a>
             </li>
             <li class="large-3 columns">
-              <a href="#">ALICE</a>
+              <a href="/case_study_single">ALICE</a>
             </li>
             <li class="large-3 columns">
-              <a href="#">Lightspeed Ventures</a>
+              <a href="/case_study_single">Lightspeed Ventures</a>
             </li>
             <li class="large-3 columns">
-              <a href="#">Travis CI</a>
+              <a href="/case_study_single">Travis CI</a>
             </li>
             <li class="large-3 columns">
-              <a href="#">Centro</a>
+              <a href="/case_study_single">Centro</a>
             </li>
           </ul>
         </div>
       </div>
     </div>
-
+</div>
 
     <%= render 'partials/footer' %>
