--- a/app/views/partials/_blog_header.html.erb
+++ b/app/views/partials/_blog_header.html.erb
@@ -3,9 +3,19 @@
       <div class="large-4 columns">
         <h3>The Bendyworks Blog</h3>
       </div>
-      <div class="large-8 columns">
-        <a href="">Categories</a>
-        <a href="">Archives</a>
+         <div class="large-8 columns">
+          <a href="#" class="button radius" data-dropdown="drop1">Categories</a>
+          <ul id="drop1" class="f-dropdown content" data-dropdown-content>
+            <li><a href="/our_blog">Articles</a></li>
+            <li><a href="/our_blog">Labs</a></li>
+            <li><a href="/our_blog">Events</a></li>
+          </ul>
+          <a href="#" class="button radius" data-dropdown="drop2">Archives</a>
+          <ul id="drop2" class="f-dropdown content" data-dropdown-content>
+            <li><a href="/our_blog">August 2013</a></li>
+            <li><a href="/our_blog">September 2013</a></li>
+            <li><a href="/our_blog">October 2013</a></li>
+          </ul>
       </div>
     </div>
   </div>
